manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teris-toys-and-trinkets-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - teristoysandtrinkets.com
      secretName: teris-toys-and-trinkets-tls
  rules:
    - host: teristoysandtrinkets.com
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: teris-backend-service
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: teris-backend-service
                port:
                  number: 8000
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: teris-backend-service
                port:
                  number: 8000
          - path: /static/admin
            pathType: Prefix
            backend:
              service:
                name: teris-backend-service
                port:
                  number: 8000
          - path: /static/rest_framework
            pathType: Prefix
            backend:
              service:
                name: teris-backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teris-frontend-service
                port:
                  number: 80
